Add flikr and facebook

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,12 @@
             <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94954</span>
           </p>
         </div>
+        <div class="col-md-4">
+          <ul class="list-inline">
+            <li><a href="https://www.facebook.com/SonomaTrikes"><i class="fa fa-lg fa-facebook"></i></a>
+            <li><a href="http://www.flickr.com/photos/spincyclz"><i class="fa fa-lg fa-flickr"></i></a>
+          </ul>
+        </div>
         </div>
       </footer>
     </div>
