Add google map with bike paths

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/css/theme.bootstrap.css">
     <style type="text/css">
     body { padding-top: 70px; }
+    #map-canvas {
+        min-height: 400px; 
+        margin: 0px;
+        padding: 0px
+      }
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
