--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li {% if page.url == "/trikes/index.html" %} class="active" {% endif %}><a href="/trikes">Trikes</a></li>
+        <li {% if page.url == "/trikes/index.html" %} class="active" {% endif %}><a href="/trikes">Our Trikes</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
