--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
         margin: 0px;
         padding: 0px
       }
+    p {
+      max-width: 85rem;
+    }
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -29,7 +32,7 @@
         <div class="col-md-4">
           <p>
           <span itemprop="name">Sonoma Trikes</span><br />
-          <a itemprop="telephone" href="tel:+1-925-301-7043">(925) 301-7043</a><br />
+          <a itemprop="telephone" href="tel:+1-707-559-8101">(707) 559-8101</a><br />
           <a itemprop="email" href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>
           </p>
         </div>
