--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
   <body>
     <div class="container">
     {{ content }}
+      <hr>
       <footer>
         <div class="row" itemscope itemtype="http://schema.org/LocalBusiness">
         <div class="col-md-4">
@@ -45,8 +46,8 @@
         </div>
         <div class="col-md-4">
           <ul class="list-inline">
-            <li><a href="https://www.facebook.com/SonomaTrikes"><i class="fa fa-lg fa-facebook"></i></a>
-            <li><a href="http://www.flickr.com/photos/spincyclz"><i class="fa fa-lg fa-flickr"></i></a>
+            <li><a href="https://www.facebook.com/SonomaTrikes"><i class="fa fa-lg fa-facebook"></i> Facebook</a>
+            <li><a href="http://www.flickr.com/photos/spincyclz"><i class="fa fa-lg fa-flickr"></i> Flickr</a>
           </ul>
         </div>
         </div>
