I didn't know you were on twitter!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
           <ul class="list-inline">
             <li><a href="https://www.facebook.com/SonomaTrikes"><i class="fa fa-lg fa-facebook"></i> Facebook</a>
             <li><a href="http://www.flickr.com/photos/spincyclz"><i class="fa fa-lg fa-flickr"></i> Flickr</a>
+            <li><a href="https://twitter.com/NandaHolz"><i class="fa fa-lg fa-twitter"></i> Twitter</a>
           </ul>
         </div>
         </div>
