--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li {% if page.url == "/trikes/index.html" %} class="active" {% endif %}><a href="/trikes">Our Trikes</a></li>
+        <li {% if page.url == "/rides/index.html" %} class="active" {% endif %}><a href="/rides">Rides &amp; Events</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
