--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,12 +66,12 @@
         </div>
       </footer>
     </div>
+    {% include ga.html %}
     <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.3.0/holder.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/jquery.tablesorter.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/jquery.tablesorter.widgets.js"></script>
-
     <script type="text/javascript">
       $(function() {
           $.extend($.tablesorter.themes.bootstrap, {
