Simplify trike table, use descriptions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,10 @@
     h1, h2, h3 {
       font-family: "coquette", 'Helvetica Neue', Helvetica, Arial, sans-serif;
     }
+    .btn-block {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
