--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/jquery.tablesorter.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/jquery.tablesorter.widgets.js"></script>
     <script type="text/javascript">
+      $(function () {
+        $('.btn-popover').popover();
+      });
       $(function() {
           $.extend($.tablesorter.themes.bootstrap, {
             // these classes are added to the table. To see other table classes available,
