Fix text wrapping at small sizes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
       }
     p {
       max-width: 85rem;
+      white-space: normal;
     }
     h1, h2, h3 {
       font-family: "coquette", 'Helvetica Neue', Helvetica, Arial, sans-serif;
