Sort of made up compare ratings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,21 @@
       padding-left: 10px;
       padding-right: 10px;
     }
+    dl.compare {
+      margin-bottom: 0;
+      margin-top: 10px;
+      font-size: smaller;
+    }
+    dl.compare dt {
+      width: 50px;
+    }
+    dl.compare dd {
+      margin-left: 60px;
+    }
+    .fa-fw {
+      width: 1.2857142857142858rem;
+    }
+
     </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
