Change to SMILES of comfort

--- a/_includes/compare.html
+++ b/_includes/compare.html
@@ -2,7 +2,7 @@
   <dt>Comfort</dt>
   <dd>
     {% for i in (1..trike.compare.comfort) %}
-    <i class="fa fa-cloud fa-fw"></i>
+    <i class="fa fa-smile-o fa-fw"></i>
     {% endfor %}
   </dd>
   <dt>Speed</dt>
