Change to X and Check

--- a/_includes/trike_details.html
+++ b/_includes/trike_details.html
@@ -6,9 +6,9 @@
   	<dt>Folding</dt>
   	<dd>
   		{%if trike.folding %}
-  		<i class='fa fa-check-square-o text-success'></i>
+  		<i class='fa fa-check text-success'></i>
   		{% else %}
-  		<i class='fa fa-square-o text-danger'></i>
+  		<i class='fa fa-times text-danger'></i>
   		{% endif %}
   	</dd>
   	<dt>Suspension</dt>
