--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/css/theme.bootstrap.css">
+    <link rel="stylesheet" href="/site.css">
     <script type="text/javascript">
       (function(d) {
         var config = {
@@ -16,40 +17,6 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
       })(document);
     </script>
-    <style type="text/css">
-    body { padding-top: 70px; }
-    #map-canvas {
-        min-height: 400px; 
-        margin: 0px;
-        padding: 0px
-      }
-    p {
-      max-width: 85rem;
-      white-space: normal;
-    }
-    h1, h2, h3 {
-      font-family: "coquette", 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    }
-    .btn-block {
-      padding-left: 10px;
-      padding-right: 10px;
-    }
-    dl.compare {
-      margin-bottom: 0;
-      margin-top: 10px;
-      font-size: smaller;
-    }
-    dl.compare dt {
-      width: 50px;
-    }
-    dl.compare dd {
-      margin-left: 60px;
-    }
-    .fa-fw {
-      width: 1.2857142857142858rem;
-    }
-
-    </style>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
