Responsive img slides

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,12 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.3.0/holder.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/jquery.tablesorter.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.13.3/jquery.tablesorter.widgets.js"></script>
+    <script src="/js/responsiveslides.min.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $(".rslides").responsiveSlides({timeout: 10000});
+      });
+    </script>
     <script type="text/javascript">
       $(function () {
         $('.btn-popover').popover();
