Randomize the images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
     <script src="/js/responsiveslides.min.js"></script>
     <script type="text/javascript">
       $(function() {
-        $(".rslides").responsiveSlides({timeout: 10000});
+        $(".rslides").responsiveSlides({timeout: 10000, random: true});
       });
     </script>
     <script type="text/javascript">
