--- a/site.css
+++ b/site.css
@@ -2,7 +2,7 @@ body { padding-top: 70px; }
 #map-canvas {
     min-height: 400px; 
     margin: 0px;
-    padding: 0px
+    padding: 0px;
     border-radius: 6px;
   }
 p {
