Font selection change
Closer to logo, less "old style"

--- a/site.css
+++ b/site.css
@@ -10,7 +10,7 @@ p {
   white-space: normal;
 }
 h1, h2, h3 {
-  font-family: "coquette", 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "cronos-pro-display", 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .btn-block {
   padding-left: 10px;
