--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="Sonoma Trikes" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/img/rotate/ice_overlook.jpg" />
+    <meta property="og:image" content="http://www.sonomatrikes.com/img/rotate/ice_overlook.jpg" />
   </head>
   <body>
     <div class="container">
