--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-49144796-1', 'sonomatrikes.com');
+      ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
 
     </script>
