Add mailchimp subscribe at the bottom of every page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,13 +50,14 @@
           <a itemprop="telephone" href="tel:+1-707-559-8101">(707) 559-8101</a><br />
           <a itemprop="email" href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>
           </p>
-        </div>
-        <div class="col-md-4">
           <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="streetAddress">1364 North McDowell Blvd #5</span><br />
             <span itemprop="addressLocality">Petaluma</span>,
             <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94954</span>
           </p>
+        </div>
+        <div class="col-md-4">
+          {% include mailchimp.html %}
         </div>
         <div class="col-md-4">
           <ul class="list-inline">
