Add upgrades and accessories

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li {% if page.url == "/trikes/index.html" %} class="active" {% endif %}><a href="/trikes">Our Trikes</a></li>
         <li {% if page.url == "/rides/index.html" %} class="active" {% endif %}><a href="/rides">Rides &amp; Events</a></li>
+        <li {% if page.url == "/accessories/index.html" %} class="active" {% endif %}><a href="/accessories">Upgrades &amp; Accessories</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
