Link to Spin Cyclz

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
             <li><a href="http://www.flickr.com/photos/spincyclz"><i class="fa fa-lg fa-flickr"></i> Flickr</a>
             <li><a href="https://twitter.com/NandaHolz"><i class="fa fa-lg fa-twitter"></i> Twitter</a>
           </ul>
+          <p>Visit our two wheeled sister company <strong><a href="http://www.spincyclz.com/">Spin Cyclz</a></strong></p>
         </div>
         </div>
       </footer>
