--- a/site.css
+++ b/site.css
@@ -11,7 +11,9 @@ p {
 }
 h1, h2, h3 {
   font-family: "cronos-pro-display", 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #2E3191;
 }
+
 .btn-block {
   padding-left: 10px;
   padding-right: 10px;
