--- a/site.css
+++ b/site.css
@@ -14,6 +14,10 @@ h1, h2, h3 {
   color: #2E3191;
 }
 
+.navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand {
+  color: #2E3191;
+}
+
 .btn-block {
   padding-left: 10px;
   padding-right: 10px;
