--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,8 @@
             <span itemprop="addressLocality">Petaluma</span>,
             <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94954</span>
           </p>
+          <p>{% include hours.html %}
+          </p>
         </div>
         <div class="col-md-4">
           {% include mailchimp.html %}
