include width for logo

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><img height="20" src="/img/trike-only.svg"> Sonoma Trikes</a>
+      <a class="navbar-brand" href="/"><img height="20" width="45" src="/img/trike-only.svg"> Sonoma Trikes</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
