--- a/site.css
+++ b/site.css
@@ -14,6 +14,10 @@ h1, h2, h3 {
   color: #2E3191;
 }
 
+.wf-loading h1, .wf-loading h2, .wf-loading h3 {
+  visibility: hidden;
+}
+
 .navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand {
   color: #2E3191;
 }
