--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,10 +52,11 @@
           <a itemprop="telephone" href="tel:+1-707-559-8101">(707) 559-8101</a><br />
           <a itemprop="email" href="mailto:sonomatrikes@gmail.com">sonomatrikes@gmail.com</a>
           </p>
+          <p><strong><i class="fa fa-truck"></i> We're moving!</strong> Please note the new address!</p>
           <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-            <span itemprop="streetAddress">1364 North McDowell Blvd #5</span><br />
-            <span itemprop="addressLocality">Petaluma</span>,
-            <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94954</span>
+            <span itemprop="streetAddress">1400 Valley House Road, Suite B</span><br />
+            <span itemprop="addressLocality">Rohnert Park</span>,
+            <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94928</span>
           </p>
           <p>{% include hours.html %}
           </p>
