--- a/_includes/hours.html
+++ b/_includes/hours.html
@@ -1,1 +1,1 @@
-<del>General shop hours <span itemprop="openingHours" content="Tu-Fr 16:00-19:00">Tue-Fri 4-7pm</span></del>.  While we're moving <strong>please make an appointment</strong> anytime between 7am-7pm, 7 days a week.
+<del>General shop hours <span itemprop="openingHours" content="Tu-Fr 16:00-19:00">Tue-Fri 4-7pm</span></del>.  While we're moving we are <strong>closed for the month of July</strong>. 
