--- a/_includes/hours.html
+++ b/_includes/hours.html
@@ -1,1 +1,1 @@
-<del>General shop hours <span itemprop="openingHours" content="Tu-Fr 16:00-19:00">Tue-Fri 4-7pm</span></del>.  While we're moving we are <strong>closed for the month of July</strong>. 
+General shop hours <span itemprop="openingHours" content="Tu-Fr 16:00-19:00">Tue-Fri 4-7pm</span>.
