--- a/_includes/hours.html
+++ b/_includes/hours.html
@@ -1,1 +1,1 @@
-General shop hours <span itemprop="openingHours" content="Tu-Fr 16:00-19:00">Tue-Fri 4-7pm</span>.
+General shop hours <span itemprop="openingHours" content="Tu-Fr 10:00-14:00">Tue-Fri 10am-2pm</span>.
