--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
           </p>
           <p><strong><i class="fa fa-truck"></i> We're moving!</strong> Please note the new address!</p>
           <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-            <span itemprop="streetAddress">1400 Valley House Road, Suite B</span><br />
+            <span itemprop="streetAddress">1400 Valley House Road, Suite A</span><br />
             <span itemprop="addressLocality">Rohnert Park</span>,
             <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">94928</span>
           </p>
