--- a/_includes/hours.html
+++ b/_includes/hours.html
@@ -1,1 +1,1 @@
-General shop hours <span itemprop="openingHours" content="Tu-Fr 10:00-14:00">Tue-Fri 10am-2pm</span>.
+Shop hours <span itemprop="openingHours" content="St-Sun 10:00-16:00">evenings and weekends by appointment</span>.
